--- a/index_main_Contact.html
+++ b/index_main_Contact.html
@@ -23,9 +23,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index_main.html">Home</a></li>
+        <li class="active"><a href="#">Home</a></li>
         <li><a href="#"></a></li>
-        <li><a href="index_main_Projects.html">Projects</a></li>
+        <li><a href="#">Projects</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
       
@@ -43,15 +43,15 @@
   <div class="row content">
 
     <div class="col-sm-2 sidenav">
-      <h3>Forrásaink:</h3>
-      <h4><a href="#"></a></h4>
-      <h4><a href="#"></a></h4>
-      <h4><a href="#"></a></h4>
-    </div>
-
+        <h3>Forrásaink:</h3>
+        <h4><a href="#"></a></h4>
+        <h4><a href="#"></a></h4>
+        <h4><a href="#"></a></h4>
+      </div>
+  
 
     <div class="col-sm-8 text-left"> 
-      <h1>Üdvözlünk a Projektünk Fő Weblapján!</h1>
+      <h1>Üdvözlünk a Projektünk Fő Weboldalán!</h1>
       <h3>Ebben a projekten befogjuk neked mutatni az alapvető dolgotak amit el kell sajátítanod mielött autóba ülhetnél!</h3>
       <h3>Első és legfontosabb az Elsősegély elméleti vizsga! Ami elsajátítása nélkül nem lehet elkezdeni a gyakorlati vezetést!</h3>
       <h3>A második dolog emi nélkül szintúgy lehetetlen hogy elkezd igazán vezetni az a Kresz vizsga! Mivel a kresz mint anyagrész igen hosszadalma..! Ezért csak két főbb ágát fogjuk nektek bemutatni! Ezek pedig: Táblák ismrete, Legfőbb szabályok az úton!</h3>
