--- a/index_main_Projects.html
+++ b/index_main_Projects.html
@@ -25,7 +25,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="index_main.html">Home</a></li>
         <li><a href="#"></a></li>
-        <li><a href="index_main_Projects.html">Projects</a></li>
+        <li><a href="#">Projects</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
       
@@ -49,20 +49,17 @@
       <h4><a href="#"></a></h4>
     </div>
 
-
     <div class="col-sm-8 text-left"> 
-      <h1>Üdvözlünk a Projektünk Fő Weblapján!</h1>
-      <h3>Ebben a projekten befogjuk neked mutatni az alapvető dolgotak amit el kell sajátítanod mielött autóba ülhetnél!</h3>
-      <h3>Első és legfontosabb az Elsősegély elméleti vizsga! Ami elsajátítása nélkül nem lehet elkezdeni a gyakorlati vezetést!</h3>
-      <h3>A második dolog emi nélkül szintúgy lehetetlen hogy elkezd igazán vezetni az a Kresz vizsga! Mivel a kresz mint anyagrész igen hosszadalma..! Ezért csak két főbb ágát fogjuk nektek bemutatni! Ezek pedig: Táblák ismrete, Legfőbb szabályok az úton!</h3>
+      <h1>Üdvözöllek a Projekt Kezelő Weblapon!</h1>
       <hr>
-      <h1>A Weboldalunk alapvető felépítése:</h1>
-      <h4>Az Alap ötlet onnan jött hogy jelenleg a mi csapatunk is ezeket tanulja mivel szeretnénk minnél hamarabb önállóak lenni szülő egységeinktől és valamilyen szinten felnőtt nek álcázni magunkat! Igaz mindösze 17 évesek vagyunk a jogosítvány egy elég nagy mérföldkő lehet az önállósodás útján!</h4>
+      <h2>Közös Weblap:</h2>
+        <h3><a href=""></a></h3>
       <hr>
-      <h2>Ha szeretnéd megnézni hogy hogyan haladtunk akkor kérlek a felül található navigációs sávon válaszd ki a "Projects" fület!</h2>
+      <h2>Dani Weblapja:</h2>
+        <h3><a href="d_elsosegely.html">Elsősegély</a></h3>
       <hr>
-      <h3>A "Contact" fül nél megtalálhatjátok az elérhetőségeinket!</h3>
-      <br>
+      <h2>Balázs Weblapja:</h2>
+        <h3><a href="B_tablak.html">Táblák</a></h3>
     </div>
 
     <div class="col-sm-2 sidenav">
